--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "frontend",
   "version": "0.0.1",
   "description": "A Quasar Project",
-  "productName": "Quasar App",
+  "productName": "NeonRetreat APP",
   "author": "brunopereira <bruno.cpereira@prozis.com>",
   "type": "module",
   "private": true,
