--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.16.4",
+    "browser-image-compression": "^2.0.2",
     "pocketbase": "^0.26.5",
     "quasar": "^2.16.0",
     "vue": "^3.5.22",
