--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "format": "prettier --write \"**/*.{js,vue,scss,html,md,json}\" --ignore-path .gitignore",
     "test": "echo \"No test specified\" && exit 0",
     "dev": "quasar dev",
+    "pb": "./backend/pocketbase serve --dir=./backend/pb_data",
+    "dev:full": "concurrently \"npm run pb\" \"npm run dev\"",
     "build": "quasar build -m pwa",
     "postinstall": "quasar prepare"
   },
@@ -28,6 +30,7 @@
     "@quasar/app-vite": "^2.1.0",
     "@vue/eslint-config-prettier": "^10.1.0",
     "autoprefixer": "^10.4.2",
+    "concurrently": "^9.2.1",
     "eslint": "^9.14.0",
     "eslint-plugin-vue": "^10.4.0",
     "globals": "^16.4.0",
