--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "quasar": "^2.16.0",
     "register-service-worker": "^1.7.2",
     "vue": "^3.5.22",
+    "vue-i18n": "^9.14.5",
     "vue-router": "^4.0.0"
   },
   "devDependencies": {
